bindings/go/marketdata/marketdata_uniffi.h

uint16_t uniffi_marketdata_uniffi_checksum_method_stockclient_historical(void
    
);
uint16_t uniffi_marketdata_uniffi_checksum_method_stockclient_intraday(void
    
);
uint16_t uniffi_marketdata_uniffi_checksum_method_stockclient_ownership(void
    
);
uint16_t uniffi_marketdata_uniffi_checksum_method_stockclient_snapshot(void
    
);
uint16_t uniffi_marketdata_uniffi_checksum_method_stockclient_technical(void
    
);
uint16_t uniffi_marketdata_uniffi_checksum_method_stockcorporateactionsclient_capital_changes_sync(void
    
);
uint16_t uniffi_marketdata_uniffi_checksum_method_stockcorporateactionsclient_dividends_sync(void
    
);
uint16_t uniffi_marketdata_uniffi_checksum_method_stockcorporateactionsclient_get_capital_changes(void
    
);
uint16_t uniffi_marketdata_uniffi_checksum_method_stockcorporateactionsclient_get_dividends(void
    
);
uint16_t uniffi_marketdata_uniffi_checksum_method_stockcorporateactionsclient_get_listing_applicants(void
    
);
uint16_t uniffi_marketdata_uniffi_checksum_method_stockcorporateactionsclient_listing_applicants_sync(void
    
);
uint16_t uniffi_marketdata_uniffi_checksum_method_stockhistoricalclient_candles_sync(void
    
);
uint16_t uniffi_marketdata_uniffi_checksum_method_stockhistoricalclient_get_candles(void
    
);
uint16_t uniffi_marketdata_uniffi_checksum_method_stockhistoricalclient_get_stats(void
    
);
uint16_t uniffi_marketdata_uniffi_checksum_method_stockhistoricalclient_stats_sync(void
    
);
uint16_t uniffi_marketdata_uniffi_checksum_method_stockintradayclient_candles_sync(void
    
);
uint16_t uniffi_marketdata_uniffi_checksum_method_stockintradayclient_get_candles(void
    
);
uint16_t uniffi_marketdata_uniffi_checksum_method_stockintradayclient_get_quote(void
    
);
uint16_t uniffi_marketdata_uniffi_checksum_method_stockintradayclient_get_ticker(void
    
);
uint16_t uniffi_marketdata_uniffi_checksum_method_stockintradayclient_get_tickers(void
    
);
uint16_t uniffi_marketdata_uniffi_checksum_method_stockintradayclient_get_trades(void
    
);
uint16_t uniffi_marketdata_uniffi_checksum_method_stockintradayclient_get_volumes(void
    
);
uint16_t uniffi_marketdata_uniffi_checksum_method_stockintradayclient_quote_sync(void
    
);
uint16_t uniffi_marketdata_uniffi_checksum_method_stockintradayclient_ticker_sync(void
    
);
uint16_t uniffi_marketdata_uniffi_checksum_method_stockintradayclient_tickers_sync(void
    
);
uint16_t uniffi_marketdata_uniffi_checksum_method_stockintradayclient_trades_sync(void
    
);
uint16_t uniffi_marketdata_uniffi_checksum_method_stockintradayclient_volumes_sync(void
    
);
uint16_t uniffi_marketdata_uniffi_checksum_method_stockownershipclient_director_holdings_sync(void
    
);
uint16_t uniffi_marketdata_uniffi_checksum_method_stockownershipclient_etf_holdings_sync(void
    
);
uint16_t uniffi_marketdata_uniffi_checksum_method_stockownershipclient_get_director_holdings(void
    
);
uint16_t uniffi_marketdata_uniffi_checksum_method_stockownershipclient_get_etf_holdings(void
    
);
uint16_t uniffi_marketdata_uniffi_checksum_method_stockownershipclient_get_institutional_trades(void
    
);
uint16_t uniffi_marketdata_uniffi_checksum_method_stockownershipclient_get_tdcc_distribution(void
    
);
uint16_t uniffi_marketdata_uniffi_checksum_method_stockownershipclient_institutional_trades_sync(void
    
);
uint16_t uniffi_marketdata_uniffi_checksum_method_stockownershipclient_tdcc_distribution_sync(void
    
);
uint16_t uniffi_marketdata_uniffi_checksum_method_stocksnapshotclient_actives_sync(void
    
);
uint16_t uniffi_marketdata_uniffi_checksum_method_stocksnapshotclient_get_actives(void
    
);
uint16_t uniffi_marketdata_uniffi_checksum_method_stocksnapshotclient_get_movers(void
    
);
uint16_t uniffi_marketdata_uniffi_checksum_method_stocksnapshotclient_get_quotes(void
    
);
uint16_t uniffi_marketdata_uniffi_checksum_method_stocksnapshotclient_movers_sync(void
    
);
uint16_t uniffi_marketdata_uniffi_checksum_method_stocksnapshotclient_quotes_sync(void
    
);
uint16_t uniffi_marketdata_uniffi_checksum_method_stocktechnicalclient_bb_sync(void
    
);
uint16_t uniffi_marketdata_uniffi_checksum_method_stocktechnicalclient_get_bb(void
    
);
uint16_t uniffi_marketdata_uniffi_checksum_method_stocktechnicalclient_get_kdj(void
    
);
uint16_t uniffi_marketdata_uniffi_checksum_method_stocktechnicalclient_get_macd(void
    
);
uint16_t uniffi_marketdata_uniffi_checksum_method_stocktechnicalclient_get_rsi(void
    
);
uint16_t uniffi_marketdata_uniffi_checksum_method_stocktechnicalclient_get_sma(void
    
);
uint16_t uniffi_marketdata_uniffi_checksum_method_stocktechnicalclient_kdj_sync(void
    
);
uint16_t uniffi_marketdata_uniffi_checksum_method_stocktechnicalclient_macd_sync(void
    
);
uint16_t uniffi_marketdata_uniffi_checksum_method_stocktechnicalclient_rsi_sync(void
    
);
uint16_t uniffi_marketdata_uniffi_checksum_method_stocktechnicalclient_sma_sync(void
    
);
uint16_t uniffi_marketdata_uniffi_checksum_method_websocketclient_connect(void
    
);
uint16_t uniffi_marketdata_uniffi_checksum_method_websocketclient_disconnect(void
    
);
uint16_t uniffi_marketdata_uniffi_checksum_method_websocketclient_is_closed(void
    
);
uint16_t uniffi_marketdata_uniffi_checksum_method_websocketclient_is_connected(void
    
);
uint16_t uniffi_marketdata_uniffi_checksum_method_websocketclient_ping(void
    
);
uint16_t uniffi_marketdata_uniffi_checksum_method_websocketclient_query_subscriptions(void
    
);
uint16_t uniffi_marketdata_uniffi_checksum_method_websocketclient_subscribe(void
    
);
uint16_t uniffi_marketdata_uniffi_checksum_method_websocketclient_unsubscribe(void
    
);
uint16_t uniffi_marketdata_uniffi_checksum_method_websocketlistener_on_connected(void
    
);
uint16_t uniffi_marketdata_uniffi_checksum_method_websocketlistener_on_disconnected(void
    
);
uint16_t uniffi_marketdata_uniffi_checksum_method_websocketlistener_on_message(void
    
);