bindings/csharp/MarketdataUniffi/marketdata_uniffi.cs


    [DllImport("marketdata_uniffi", CallingConvention = CallingConvention.Cdecl)]
    public static extern ushort uniffi_marketdata_uniffi_checksum_method_stockclient_historical();

    [DllImport("marketdata_uniffi", CallingConvention = CallingConvention.Cdecl)]
    public static extern ushort uniffi_marketdata_uniffi_checksum_method_stockclient_intraday();

    [DllImport("marketdata_uniffi", CallingConvention = CallingConvention.Cdecl)]
    public static extern ushort uniffi_marketdata_uniffi_checksum_method_stockclient_ownership();

    [DllImport("marketdata_uniffi", CallingConvention = CallingConvention.Cdecl)]
    public static extern ushort uniffi_marketdata_uniffi_checksum_method_stockclient_snapshot();

    [DllImport("marketdata_uniffi", CallingConvention = CallingConvention.Cdecl)]
    public static extern ushort uniffi_marketdata_uniffi_checksum_method_stockclient_technical();

    [DllImport("marketdata_uniffi", CallingConvention = CallingConvention.Cdecl)]
    public static extern ushort uniffi_marketdata_uniffi_checksum_method_stockcorporateactionsclient_capital_changes_sync();

    [DllImport("marketdata_uniffi", CallingConvention = CallingConvention.Cdecl)]
    public static extern ushort uniffi_marketdata_uniffi_checksum_method_stockcorporateactionsclient_dividends_sync();

    [DllImport("marketdata_uniffi", CallingConvention = CallingConvention.Cdecl)]
    public static extern ushort uniffi_marketdata_uniffi_checksum_method_stockcorporateactionsclient_get_capital_changes();

    [DllImport("marketdata_uniffi", CallingConvention = CallingConvention.Cdecl)]
    public static extern ushort uniffi_marketdata_uniffi_checksum_method_stockcorporateactionsclient_get_dividends();

    [DllImport("marketdata_uniffi", CallingConvention = CallingConvention.Cdecl)]
    public static extern ushort uniffi_marketdata_uniffi_checksum_method_stockcorporateactionsclient_get_listing_applicants();

    [DllImport("marketdata_uniffi", CallingConvention = CallingConvention.Cdecl)]
    public static extern ushort uniffi_marketdata_uniffi_checksum_method_stockcorporateactionsclient_listing_applicants_sync();

    [DllImport("marketdata_uniffi", CallingConvention = CallingConvention.Cdecl)]
    public static extern ushort uniffi_marketdata_uniffi_checksum_method_stockhistoricalclient_candles_sync();

    [DllImport("marketdata_uniffi", CallingConvention = CallingConvention.Cdecl)]
    public static extern ushort uniffi_marketdata_uniffi_checksum_method_stockhistoricalclient_get_candles();

    [DllImport("marketdata_uniffi", CallingConvention = CallingConvention.Cdecl)]
    public static extern ushort uniffi_marketdata_uniffi_checksum_method_stockhistoricalclient_get_stats();

    [DllImport("marketdata_uniffi", CallingConvention = CallingConvention.Cdecl)]
    public static extern ushort uniffi_marketdata_uniffi_checksum_method_stockhistoricalclient_stats_sync();

    [DllImport("marketdata_uniffi", CallingConvention = CallingConvention.Cdecl)]
    public static extern ushort uniffi_marketdata_uniffi_checksum_method_stockintradayclient_candles_sync();

    [DllImport("marketdata_uniffi", CallingConvention = CallingConvention.Cdecl)]
    public static extern ushort uniffi_marketdata_uniffi_checksum_method_stockintradayclient_get_candles();

    [DllImport("marketdata_uniffi", CallingConvention = CallingConvention.Cdecl)]
    public static extern ushort uniffi_marketdata_uniffi_checksum_method_stockintradayclient_get_quote();

    [DllImport("marketdata_uniffi", CallingConvention = CallingConvention.Cdecl)]
    public static extern ushort uniffi_marketdata_uniffi_checksum_method_stockintradayclient_get_ticker();

    [DllImport("marketdata_uniffi", CallingConvention = CallingConvention.Cdecl)]
    public static extern ushort uniffi_marketdata_uniffi_checksum_method_stockintradayclient_get_tickers();

    [DllImport("marketdata_uniffi", CallingConvention = CallingConvention.Cdecl)]
    public static extern ushort uniffi_marketdata_uniffi_checksum_method_stockintradayclient_get_trades();

    [DllImport("marketdata_uniffi", CallingConvention = CallingConvention.Cdecl)]
    public static extern ushort uniffi_marketdata_uniffi_checksum_method_stockintradayclient_get_volumes();

    [DllImport("marketdata_uniffi", CallingConvention = CallingConvention.Cdecl)]
    public static extern ushort uniffi_marketdata_uniffi_checksum_method_stockintradayclient_quote_sync();

    [DllImport("marketdata_uniffi", CallingConvention = CallingConvention.Cdecl)]
    public static extern ushort uniffi_marketdata_uniffi_checksum_method_stockintradayclient_ticker_sync();

    [DllImport("marketdata_uniffi", CallingConvention = CallingConvention.Cdecl)]
    public static extern ushort uniffi_marketdata_uniffi_checksum_method_stockintradayclient_tickers_sync();

    [DllImport("marketdata_uniffi", CallingConvention = CallingConvention.Cdecl)]
    public static extern ushort uniffi_marketdata_uniffi_checksum_method_stockintradayclient_trades_sync();

    [DllImport("marketdata_uniffi", CallingConvention = CallingConvention.Cdecl)]
    public static extern ushort uniffi_marketdata_uniffi_checksum_method_stockintradayclient_volumes_sync();

    [DllImport("marketdata_uniffi", CallingConvention = CallingConvention.Cdecl)]
    public static extern ushort uniffi_marketdata_uniffi_checksum_method_stockownershipclient_director_holdings_sync();

    [DllImport("marketdata_uniffi", CallingConvention = CallingConvention.Cdecl)]
    public static extern ushort uniffi_marketdata_uniffi_checksum_method_stockownershipclient_etf_holdings_sync();

    [DllImport("marketdata_uniffi", CallingConvention = CallingConvention.Cdecl)]
    public static extern ushort uniffi_marketdata_uniffi_checksum_method_stockownershipclient_get_director_holdings();

    [DllImport("marketdata_uniffi", CallingConvention = CallingConvention.Cdecl)]
    public static extern ushort uniffi_marketdata_uniffi_checksum_method_stockownershipclient_get_etf_holdings();

    [DllImport("marketdata_uniffi", CallingConvention = CallingConvention.Cdecl)]
    public static extern ushort uniffi_marketdata_uniffi_checksum_method_stockownershipclient_get_institutional_trades();

    [DllImport("marketdata_uniffi", CallingConvention = CallingConvention.Cdecl)]
    public static extern ushort uniffi_marketdata_uniffi_checksum_method_stockownershipclient_get_tdcc_distribution();

    [DllImport("marketdata_uniffi", CallingConvention = CallingConvention.Cdecl)]
    public static extern ushort uniffi_marketdata_uniffi_checksum_method_stockownershipclient_institutional_trades_sync();

    [DllImport("marketdata_uniffi", CallingConvention = CallingConvention.Cdecl)]
    public static extern ushort uniffi_marketdata_uniffi_checksum_method_stockownershipclient_tdcc_distribution_sync();

    [DllImport("marketdata_uniffi", CallingConvention = CallingConvention.Cdecl)]
    public static extern ushort uniffi_marketdata_uniffi_checksum_method_stocksnapshotclient_actives_sync();

    [DllImport("marketdata_uniffi", CallingConvention = CallingConvention.Cdecl)]
    public static extern ushort uniffi_marketdata_uniffi_checksum_method_stocksnapshotclient_get_actives();

    [DllImport("marketdata_uniffi", CallingConvention = CallingConvention.Cdecl)]
    public static extern ushort uniffi_marketdata_uniffi_checksum_method_stocksnapshotclient_get_movers();

    [DllImport("marketdata_uniffi", CallingConvention = CallingConvention.Cdecl)]
    public static extern ushort uniffi_marketdata_uniffi_checksum_method_stocksnapshotclient_get_quotes();

    [DllImport("marketdata_uniffi", CallingConvention = CallingConvention.Cdecl)]
    public static extern ushort uniffi_marketdata_uniffi_checksum_method_stocksnapshotclient_movers_sync();

    [DllImport("marketdata_uniffi", CallingConvention = CallingConvention.Cdecl)]
    public static extern ushort uniffi_marketdata_uniffi_checksum_method_stocksnapshotclient_quotes_sync();

    [DllImport("marketdata_uniffi", CallingConvention = CallingConvention.Cdecl)]
    public static extern ushort uniffi_marketdata_uniffi_checksum_method_stocktechnicalclient_bb_sync();

    [DllImport("marketdata_uniffi", CallingConvention = CallingConvention.Cdecl)]
    public static extern ushort uniffi_marketdata_uniffi_checksum_method_stocktechnicalclient_get_bb();

    [DllImport("marketdata_uniffi", CallingConvention = CallingConvention.Cdecl)]
    public static extern ushort uniffi_marketdata_uniffi_checksum_method_stocktechnicalclient_get_kdj();

    [DllImport("marketdata_uniffi", CallingConvention = CallingConvention.Cdecl)]
    public static extern ushort uniffi_marketdata_uniffi_checksum_method_stocktechnicalclient_get_macd();

    [DllImport("marketdata_uniffi", CallingConvention = CallingConvention.Cdecl)]
    public static extern ushort uniffi_marketdata_uniffi_checksum_method_stocktechnicalclient_get_rsi();

    [DllImport("marketdata_uniffi", CallingConvention = CallingConvention.Cdecl)]
    public static extern ushort uniffi_marketdata_uniffi_checksum_method_stocktechnicalclient_get_sma();

    [DllImport("marketdata_uniffi", CallingConvention = CallingConvention.Cdecl)]
    public static extern ushort uniffi_marketdata_uniffi_checksum_method_stocktechnicalclient_kdj_sync();

    [DllImport("marketdata_uniffi", CallingConvention = CallingConvention.Cdecl)]
    public static extern ushort uniffi_marketdata_uniffi_checksum_method_stocktechnicalclient_macd_sync();

    [DllImport("marketdata_uniffi", CallingConvention = CallingConvention.Cdecl)]
    public static extern ushort uniffi_marketdata_uniffi_checksum_method_stocktechnicalclient_rsi_sync();

    [DllImport("marketdata_uniffi", CallingConvention = CallingConvention.Cdecl)]
    public static extern ushort uniffi_marketdata_uniffi_checksum_method_stocktechnicalclient_sma_sync();

    [DllImport("marketdata_uniffi", CallingConvention = CallingConvention.Cdecl)]
    public static extern ushort uniffi_marketdata_uniffi_checksum_method_websocketclient_connect();

    [DllImport("marketdata_uniffi", CallingConvention = CallingConvention.Cdecl)]
    public static extern ushort uniffi_marketdata_uniffi_checksum_method_websocketclient_disconnect();

    [DllImport("marketdata_uniffi", CallingConvention = CallingConvention.Cdecl)]
    public static extern ushort uniffi_marketdata_uniffi_checksum_method_websocketclient_is_closed();

    [DllImport("marketdata_uniffi", CallingConvention = CallingConvention.Cdecl)]
    public static extern ushort uniffi_marketdata_uniffi_checksum_method_websocketclient_is_connected();

    [DllImport("marketdata_uniffi", CallingConvention = CallingConvention.Cdecl)]
    public static extern ushort uniffi_marketdata_uniffi_checksum_method_websocketclient_ping();

    [DllImport("marketdata_uniffi", CallingConvention = CallingConvention.Cdecl)]
    public static extern ushort uniffi_marketdata_uniffi_checksum_method_websocketclient_query_subscriptions();

    [DllImport("marketdata_uniffi", CallingConvention = CallingConvention.Cdecl)]
    public static extern ushort uniffi_marketdata_uniffi_checksum_method_websocketclient_subscribe();

    [DllImport("marketdata_uniffi", CallingConvention = CallingConvention.Cdecl)]
    public static extern ushort uniffi_marketdata_uniffi_checksum_method_websocketclient_unsubscribe();

    [DllImport("marketdata_uniffi", CallingConvention = CallingConvention.Cdecl)]
    public static extern ushort uniffi_marketdata_uniffi_checksum_method_websocketlistener_on_connected();

    [DllImport("marketdata_uniffi", CallingConvention = CallingConvention.Cdecl)]
    public static extern ushort uniffi_marketdata_uniffi_checksum_method_websocketlistener_on_disconnected();

    [DllImport("marketdata_uniffi", CallingConvention = CallingConvention.Cdecl)]
    public static extern ushort uniffi_marketdata_uniffi_checksum_method_websocketlistener_on_message();
